[gd_scene load_steps=5 format=2]

[ext_resource path="res://bird.png" type="Texture" id=1]
[ext_resource path="res://entity.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 180.0

[sub_resource type="CircleShape2D" id=2]
radius = 80.0

[node name="entity" type="Node2D"]
scale = Vector2( 0.25, 0.25 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="neighbor_area" type="Area2D" parent="." groups=[
"neighbor_area",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="neighbor_area"]
shape = SubResource( 1 )

[node name="separation_area" type="Area2D" parent="." groups=[
"separation_area",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="separation_area"]
shape = SubResource( 2 )
[connection signal="area_entered" from="neighbor_area" to="." method="_on_neighbor_area_area_entered"]
[connection signal="area_exited" from="neighbor_area" to="." method="_on_neighbor_area_area_exited"]
[connection signal="area_entered" from="separation_area" to="." method="_on_separation_area_area_entered"]
[connection signal="area_exited" from="separation_area" to="." method="_on_separation_area_area_exited"]
